<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentTres">

    <TextView
        android:id="@+id/encabezado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/complete_sus_datos"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:background="#B1F364"
        android:textColor="@color/white"
        android:padding="15dp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/actualizara_imagen"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/user"
        android:layout_below="@id/encabezado"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/actualizara_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/actualizara_imagen"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:hint="@string/ingrese_su_nombre"
        android:inputType="text"/>

    <EditText
        android:id="@+id/actualizara_direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/actualizara_nombre"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/ingrese_su_direccion"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/actualizara_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/actualizara_direccion"
        android:layout_margin="20dp"
        android:hint="@string/ingrese_su_telefono"
        android:inputType="number"
        android:padding="10dp" />

    <EditText
        android:id="@+id/actualizara_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/actualizara_telefono"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/ingrese_su_correo_electronico"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <Button
        android:id="@+id/actualizara_boton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/actualizara_correo"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textSize="18dp"
        android:background="#0490FF"
        android:textColor="@color/white"
        android:text="@string/guardar_informacion"/>


</RelativeLayout>