<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentUno">

    <TextView
        android:id="@+id/encabezado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido_a_be_fit"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:background="#B1F364"
        android:textColor="@color/white"
        android:padding="15dp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/bienvenidaImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bienvenida" />

    <Button
        android:id="@+id/button4"
        android:layout_width="342dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="190dp"
        android:backgroundTint="#FE5000"
        android:text="@string/contactanos"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bienvenidaImage" />

    <Button
        android:id="@+id/btnGoToFB"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="83dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/facebook"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/btnGoToWhats"
        android:layout_width="140dp"
        android:layout_height="47dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="137dp"
        android:backgroundTint="#99EF35"
        android:text="@string/whatsapp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoToFB" />


</RelativeLayout>